k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeloo
  labels:
    app: zeloo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: metrics
    port: 9090
    targetPort: metrics
  selector:
    app: zeloo
